# asimov_python_crewai

./: Dockerfile  docker-compose.yaml  requirements.txt
basics/: 01_blog_post_crew.ipynb  app.py  post.ipynb  requirements.txt
crew_of_crew_project/: README.md  pyproject.toml
crew_of_crew_project/output/: agents.yaml  crew.py  tasks.yaml
crew_of_crew_project/src/crew_of_crew_project/: crew.py  main.py
crew_of_crew_project/src/crew_of_crew_project/config/: agents.yaml  tasks.yaml
projeto_para_producao/: pyproject.toml  report.md
projeto_para_producao/src/projeto_para_producao/: crew.py  main.py
tools/: criando_tool.ipynb
