[project]
name = "crew_of_crew_project"
version = "0.1.0"
description = "crew_of_crew_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
crew_of_crew_project = "crew_of_crew_project.main:run"
run_crew = "crew_of_crew_project.main:run"
train = "crew_of_crew_project.main:train"
replay = "crew_of_crew_project.main:replay"
test = "crew_of_crew_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
